# CppKafka

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-consumer.sh  build-producer.sh  docker_build.sh  main.cpp  project-build.sh
base/: lock.cpp  lock.h  singleton.h
reconnect/: consumer.cpp  consumer.h  producer.cpp  producer.h
simple/: producer.cpp  producer.h
tools/: incl.sh  init.sh  install-kafka.sh
tools/lib/librdkafka/lib/: librdkafka++.so.1
tools/lib/librdkafka/lib/pkgconfig/: rdkafka++-static.pc  rdkafka++.pc  rdkafka-static.pc  rdkafka.pc
tools/librdkafka-1.4.0/: CONFIGURATION.md
